force-app/main/default/objects/OCLQS_CPI_Tracking__c/OCLQS_CPI_Tracking__c.object-meta.xml
<CustomObject>
    <description>This object is used for CPI tracking. 
Records from this object will be pushed into JFS CPI system via Integration - Nightly Batch.
Records will be deleted from this objects once its feed into CPI systems, just to control data volume.</description>
    <label>CPI Tracking</label>
    <nameField>
        <label>CPI Tracking</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPI Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>