force-app/main/default/objects/OCLQS_CPI_Tracking__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Name of the Salesforce Object against which CPI details will be logged</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>