force-app/main/default/objects/OCLQS_CPI_Tracking__c/fields/Screen_URL__c.field-meta.xml
<CustomField>
    <fullName>Screen_URL__c</fullName>
    <label>Screen URL</label>
    <type>Url</type>
</CustomField>