force-app/main/default/objects/OCLQS_CPI_Tracking__c/fields/User_Alias__c.field-meta.xml
<CustomField>
    <fullName>User_Alias__c</fullName>
    <label>User Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>