force-app/main/default/objects/OCLQS_CPI_Tracking__c/fields/User_First_Name__c.field-meta.xml
<CustomField>
    <fullName>User_First_Name__c</fullName>
    <label>User First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>