force-app/main/default/objects/OCLQS_CPI_Tracking__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>User Id against whom CPI details will be logged</description>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>