force-app/main/default/objects/OCLQS_CPI_Tracking__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <type>TextArea</type>
</CustomField>